@@ -32,5 +32,11 @@ namespace Publisher
 {
     public sealed class CollatedDirectory :
         CollatedObject
-    { }
+    {
+        public override void
+        Evaluate()
+        {
+            this.ReasonToExecute = null;
+        }
+    }
 }
